
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int EXIT_FAILURE ;
 int dprintf (char*,int) ;
 int exit (int ) ;
 int get_nprocs_conf () ;

void check_procs() {
 int min_procs = 2;

 int nprocs = 0;
 nprocs = get_nprocs_conf();

 if (nprocs < min_procs) {
  dprintf("[-] system has less than %d processor cores\n", min_procs);
  exit(EXIT_FAILURE);
 }

 dprintf("[.] system has %d processors\n", nprocs);
}
